parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    INT

Grammar

Rule 0     S' -> input
Rule 1     input -> <empty>
Rule 2     input -> command input
Rule 3     command -> COMMENT
Rule 4     SYMBOL -> XYZ
Rule 5     SYMBOL -> ID
Rule 6     TEXT -> SYMBOL
Rule 7     TEXT -> STRING
Rule 8     NUMBER -> DOUBLE
Rule 9     command -> POP
Rule 10    command -> PUSH
Rule 11    command -> SCREEN NUMBER NUMBER
Rule 12    command -> SCREEN
Rule 13    command -> SAVE TEXT TEXT
Rule 14    command -> DISPLAY
Rule 15    command -> CONE NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 16    command -> CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 17    command -> CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 18    command -> CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 19    command -> SPHERE NUMBER NUMBER NUMBER NUMBER
Rule 20    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 21    command -> SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 22    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 23    command -> PATH SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 24    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 25    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 26    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 27    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 28    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 29    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 30    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 31    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 32    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 33    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 34    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 35    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 36    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 37    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 38    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 39    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 40    command -> MOVE NUMBER NUMBER NUMBER SYMBOL
Rule 41    command -> MOVE NUMBER NUMBER NUMBER
Rule 42    command -> MOVE SYMBOL
Rule 43    command -> SCALE NUMBER NUMBER NUMBER SYMBOL
Rule 44    command -> SCALE NUMBER NUMBER NUMBER
Rule 45    command -> ROTATE XYZ NUMBER SYMBOL
Rule 46    command -> ROTATE XYZ NUMBER
Rule 47    command -> FRAMES NUMBER
Rule 48    command -> BASENAME TEXT
Rule 49    command -> VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 50    command -> VARY SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 51    command -> SET SYMBOL NUMBER
Rule 52    command -> SET_KNOBS NUMBER
Rule 53    command -> AMBIENT NUMBER NUMBER NUMBER
Rule 54    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 55    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 56    command -> LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 57    command -> SHADING SHADING_TYPE
Rule 58    command -> CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 59    command -> GENERATE_RAYFILES
Rule 60    command -> MESH CO TEXT
Rule 61    command -> MESH SYMBOL CO TEXT
Rule 62    command -> MESH CO TEXT SYMBOL
Rule 63    command -> MESH SYMBOL CO TEXT SYMBOL
Rule 64    command -> SAVE_KNOBS SYMBOL
Rule 65    command -> SAVE_COORDS SYMBOL
Rule 66    command -> TWEEN NUMBER NUMBER SYMBOL SYMBOL
Rule 67    command -> FOCAL NUMBER
Rule 68    command -> WEB
Rule 69    command -> TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

Terminals, with rules where they appear

AMBIENT              : 53
BASENAME             : 48
BOX                  : 28 29 30 31
CAMERA               : 58
CO                   : 60 61 62 63
COMMENT              : 3
CONE                 : 15 16
CONSTANTS            : 54 55
CYLINDER             : 17 18
DISPLAY              : 14
DOUBLE               : 8
FOCAL                : 67
FRAMES               : 47
GENERATE_RAYFILES    : 59
ID                   : 5
INT                  :
LIGHT                : 56
LINE                 : 32 33 34 35 36 37 38 39
MESH                 : 60 61 62 63
MOVE                 : 40 41 42
PATH                 : 23
POP                  : 9
PUSH                 : 10
ROTATE               : 45 46
SAVE                 : 13
SAVE_COORDS          : 65
SAVE_KNOBS           : 64
SCALE                : 43 44
SCREEN               : 11 12
SET                  : 51
SET_KNOBS            : 52
SHADING              : 57
SHADING_TYPE         : 57
SPHERE               : 19 20 21 22
STRING               : 7
TEXTURE              : 69
TORUS                : 24 25 26 27
TWEEN                : 66
VARY                 : 49 50
WEB                  : 68
XYZ                  : 4 45 46
error                :

Nonterminals, with rules where they appear

NUMBER               : 11 11 15 15 15 15 15 16 16 16 16 16 17 17 17 17 17 18 18 18 18 18 19 19 19 19 20 20 20 20 21 21 21 21 22 22 22 22 23 23 23 23 23 23 23 23 23 23 24 24 24 24 24 25 25 25 25 25 26 26 26 26 26 27 27 27 27 27 28 28 28 28 28 28 29 29 29 29 29 29 30 30 30 30 30 30 31 31 31 31 31 31 32 32 32 32 32 32 33 33 33 33 33 33 34 34 34 34 34 34 35 35 35 35 35 35 36 36 36 36 36 36 37 37 37 37 37 37 38 38 38 38 38 38 39 39 39 39 39 39 40 40 40 41 41 41 43 43 43 44 44 44 45 46 47 49 49 49 49 50 50 50 50 51 52 53 53 53 54 54 54 54 54 54 54 54 54 55 55 55 55 55 55 55 55 55 55 55 55 56 56 56 56 56 56 58 58 58 58 58 58 66 66 67 69 69 69 69 69 69 69 69 69 69 69 69
SYMBOL               : 6 16 18 20 21 22 22 23 25 26 27 27 29 30 31 31 33 34 35 35 36 37 37 38 38 39 39 39 40 42 43 45 49 50 50 51 54 55 56 61 62 63 63 64 65 66 66 69
TEXT                 : 13 13 48 60 61 62 63
command              : 2
input                : 2 0

Parsing method: LALR

state 0

    (0) S' -> . input
    (1) input -> .
    (2) input -> . command input
    (3) command -> . COMMENT
    (9) command -> . POP
    (10) command -> . PUSH
    (11) command -> . SCREEN NUMBER NUMBER
    (12) command -> . SCREEN
    (13) command -> . SAVE TEXT TEXT
    (14) command -> . DISPLAY
    (15) command -> . CONE NUMBER NUMBER NUMBER NUMBER NUMBER
    (16) command -> . CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (17) command -> . CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER
    (18) command -> . CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (19) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (20) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (21) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
    (22) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (23) command -> . PATH SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (25) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (26) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (27) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (28) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (29) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (30) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (31) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (32) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (33) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (34) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (35) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (36) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (37) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (38) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (39) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (40) command -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (41) command -> . MOVE NUMBER NUMBER NUMBER
    (42) command -> . MOVE SYMBOL
    (43) command -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (44) command -> . SCALE NUMBER NUMBER NUMBER
    (45) command -> . ROTATE XYZ NUMBER SYMBOL
    (46) command -> . ROTATE XYZ NUMBER
    (47) command -> . FRAMES NUMBER
    (48) command -> . BASENAME TEXT
    (49) command -> . VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
    (50) command -> . VARY SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (51) command -> . SET SYMBOL NUMBER
    (52) command -> . SET_KNOBS NUMBER
    (53) command -> . AMBIENT NUMBER NUMBER NUMBER
    (54) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (55) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (56) command -> . LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (57) command -> . SHADING SHADING_TYPE
    (58) command -> . CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (59) command -> . GENERATE_RAYFILES
    (60) command -> . MESH CO TEXT
    (61) command -> . MESH SYMBOL CO TEXT
    (62) command -> . MESH CO TEXT SYMBOL
    (63) command -> . MESH SYMBOL CO TEXT SYMBOL
    (64) command -> . SAVE_KNOBS SYMBOL
    (65) command -> . SAVE_COORDS SYMBOL
    (66) command -> . TWEEN NUMBER NUMBER SYMBOL SYMBOL
    (67) command -> . FOCAL NUMBER
    (68) command -> . WEB
    (69) command -> . TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    $end            reduce using rule 1 (input -> .)
    COMMENT         shift and go to state 15
    POP             shift and go to state 17
    PUSH            shift and go to state 20
    SCREEN          shift and go to state 25
    SAVE            shift and go to state 35
    DISPLAY         shift and go to state 13
    CONE            shift and go to state 9
    CYLINDER        shift and go to state 3
    SPHERE          shift and go to state 28
    PATH            shift and go to state 11
    TORUS           shift and go to state 22
    BOX             shift and go to state 1
    LINE            shift and go to state 12
    MOVE            shift and go to state 5
    SCALE           shift and go to state 4
    ROTATE          shift and go to state 31
    FRAMES          shift and go to state 10
    BASENAME        shift and go to state 14
    VARY            shift and go to state 6
    SET             shift and go to state 16
    SET_KNOBS       shift and go to state 32
    AMBIENT         shift and go to state 34
    CONSTANTS       shift and go to state 36
    LIGHT           shift and go to state 19
    SHADING         shift and go to state 30
    CAMERA          shift and go to state 18
    GENERATE_RAYFILES shift and go to state 2
    MESH            shift and go to state 29
    SAVE_KNOBS      shift and go to state 26
    SAVE_COORDS     shift and go to state 8
    TWEEN           shift and go to state 27
    FOCAL           shift and go to state 23
    WEB             shift and go to state 24
    TEXTURE         shift and go to state 7

    input                          shift and go to state 21
    command                        shift and go to state 33

state 1

    (28) command -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (29) command -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (30) command -> BOX . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (31) command -> BOX . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 37
    XYZ             shift and go to state 41
    ID              shift and go to state 40

    SYMBOL                         shift and go to state 38
    NUMBER                         shift and go to state 39

state 2

    (59) command -> GENERATE_RAYFILES .

    COMMENT         reduce using rule 59 (command -> GENERATE_RAYFILES .)
    POP             reduce using rule 59 (command -> GENERATE_RAYFILES .)
    PUSH            reduce using rule 59 (command -> GENERATE_RAYFILES .)
    SCREEN          reduce using rule 59 (command -> GENERATE_RAYFILES .)
    SAVE            reduce using rule 59 (command -> GENERATE_RAYFILES .)
    DISPLAY         reduce using rule 59 (command -> GENERATE_RAYFILES .)
    CONE            reduce using rule 59 (command -> GENERATE_RAYFILES .)
    CYLINDER        reduce using rule 59 (command -> GENERATE_RAYFILES .)
    SPHERE          reduce using rule 59 (command -> GENERATE_RAYFILES .)
    PATH            reduce using rule 59 (command -> GENERATE_RAYFILES .)
    TORUS           reduce using rule 59 (command -> GENERATE_RAYFILES .)
    BOX             reduce using rule 59 (command -> GENERATE_RAYFILES .)
    LINE            reduce using rule 59 (command -> GENERATE_RAYFILES .)
    MOVE            reduce using rule 59 (command -> GENERATE_RAYFILES .)
    SCALE           reduce using rule 59 (command -> GENERATE_RAYFILES .)
    ROTATE          reduce using rule 59 (command -> GENERATE_RAYFILES .)
    FRAMES          reduce using rule 59 (command -> GENERATE_RAYFILES .)
    BASENAME        reduce using rule 59 (command -> GENERATE_RAYFILES .)
    VARY            reduce using rule 59 (command -> GENERATE_RAYFILES .)
    SET             reduce using rule 59 (command -> GENERATE_RAYFILES .)
    SET_KNOBS       reduce using rule 59 (command -> GENERATE_RAYFILES .)
    AMBIENT         reduce using rule 59 (command -> GENERATE_RAYFILES .)
    CONSTANTS       reduce using rule 59 (command -> GENERATE_RAYFILES .)
    LIGHT           reduce using rule 59 (command -> GENERATE_RAYFILES .)
    SHADING         reduce using rule 59 (command -> GENERATE_RAYFILES .)
    CAMERA          reduce using rule 59 (command -> GENERATE_RAYFILES .)
    GENERATE_RAYFILES reduce using rule 59 (command -> GENERATE_RAYFILES .)
    MESH            reduce using rule 59 (command -> GENERATE_RAYFILES .)
    SAVE_KNOBS      reduce using rule 59 (command -> GENERATE_RAYFILES .)
    SAVE_COORDS     reduce using rule 59 (command -> GENERATE_RAYFILES .)
    TWEEN           reduce using rule 59 (command -> GENERATE_RAYFILES .)
    FOCAL           reduce using rule 59 (command -> GENERATE_RAYFILES .)
    WEB             reduce using rule 59 (command -> GENERATE_RAYFILES .)
    TEXTURE         reduce using rule 59 (command -> GENERATE_RAYFILES .)
    $end            reduce using rule 59 (command -> GENERATE_RAYFILES .)


state 3

    (17) command -> CYLINDER . NUMBER NUMBER NUMBER NUMBER NUMBER
    (18) command -> CYLINDER . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 37
    XYZ             shift and go to state 41
    ID              shift and go to state 40

    SYMBOL                         shift and go to state 43
    NUMBER                         shift and go to state 42

state 4

    (43) command -> SCALE . NUMBER NUMBER NUMBER SYMBOL
    (44) command -> SCALE . NUMBER NUMBER NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 37

    NUMBER                         shift and go to state 44

state 5

    (40) command -> MOVE . NUMBER NUMBER NUMBER SYMBOL
    (41) command -> MOVE . NUMBER NUMBER NUMBER
    (42) command -> MOVE . SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 37
    XYZ             shift and go to state 41
    ID              shift and go to state 40

    SYMBOL                         shift and go to state 45
    NUMBER                         shift and go to state 46

state 6

    (49) command -> VARY . SYMBOL NUMBER NUMBER NUMBER NUMBER
    (50) command -> VARY . SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 41
    ID              shift and go to state 40

    SYMBOL                         shift and go to state 47

state 7

    (69) command -> TEXTURE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 41
    ID              shift and go to state 40

    SYMBOL                         shift and go to state 48

state 8

    (65) command -> SAVE_COORDS . SYMBOL
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 41
    ID              shift and go to state 40

    SYMBOL                         shift and go to state 49

state 9

    (15) command -> CONE . NUMBER NUMBER NUMBER NUMBER NUMBER
    (16) command -> CONE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 37
    XYZ             shift and go to state 41
    ID              shift and go to state 40

    SYMBOL                         shift and go to state 50
    NUMBER                         shift and go to state 51

state 10

    (47) command -> FRAMES . NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 37

    NUMBER                         shift and go to state 52

state 11

    (23) command -> PATH . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 41
    ID              shift and go to state 40

    SYMBOL                         shift and go to state 53

state 12

    (32) command -> LINE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (33) command -> LINE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (34) command -> LINE . NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (35) command -> LINE . NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (36) command -> LINE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (37) command -> LINE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (38) command -> LINE . SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (39) command -> LINE . SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 37
    XYZ             shift and go to state 41
    ID              shift and go to state 40

    SYMBOL                         shift and go to state 55
    NUMBER                         shift and go to state 54

state 13

    (14) command -> DISPLAY .

    COMMENT         reduce using rule 14 (command -> DISPLAY .)
    POP             reduce using rule 14 (command -> DISPLAY .)
    PUSH            reduce using rule 14 (command -> DISPLAY .)
    SCREEN          reduce using rule 14 (command -> DISPLAY .)
    SAVE            reduce using rule 14 (command -> DISPLAY .)
    DISPLAY         reduce using rule 14 (command -> DISPLAY .)
    CONE            reduce using rule 14 (command -> DISPLAY .)
    CYLINDER        reduce using rule 14 (command -> DISPLAY .)
    SPHERE          reduce using rule 14 (command -> DISPLAY .)
    PATH            reduce using rule 14 (command -> DISPLAY .)
    TORUS           reduce using rule 14 (command -> DISPLAY .)
    BOX             reduce using rule 14 (command -> DISPLAY .)
    LINE            reduce using rule 14 (command -> DISPLAY .)
    MOVE            reduce using rule 14 (command -> DISPLAY .)
    SCALE           reduce using rule 14 (command -> DISPLAY .)
    ROTATE          reduce using rule 14 (command -> DISPLAY .)
    FRAMES          reduce using rule 14 (command -> DISPLAY .)
    BASENAME        reduce using rule 14 (command -> DISPLAY .)
    VARY            reduce using rule 14 (command -> DISPLAY .)
    SET             reduce using rule 14 (command -> DISPLAY .)
    SET_KNOBS       reduce using rule 14 (command -> DISPLAY .)
    AMBIENT         reduce using rule 14 (command -> DISPLAY .)
    CONSTANTS       reduce using rule 14 (command -> DISPLAY .)
    LIGHT           reduce using rule 14 (command -> DISPLAY .)
    SHADING         reduce using rule 14 (command -> DISPLAY .)
    CAMERA          reduce using rule 14 (command -> DISPLAY .)
    GENERATE_RAYFILES reduce using rule 14 (command -> DISPLAY .)
    MESH            reduce using rule 14 (command -> DISPLAY .)
    SAVE_KNOBS      reduce using rule 14 (command -> DISPLAY .)
    SAVE_COORDS     reduce using rule 14 (command -> DISPLAY .)
    TWEEN           reduce using rule 14 (command -> DISPLAY .)
    FOCAL           reduce using rule 14 (command -> DISPLAY .)
    WEB             reduce using rule 14 (command -> DISPLAY .)
    TEXTURE         reduce using rule 14 (command -> DISPLAY .)
    $end            reduce using rule 14 (command -> DISPLAY .)


state 14

    (48) command -> BASENAME . TEXT
    (6) TEXT -> . SYMBOL
    (7) TEXT -> . STRING
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    STRING          shift and go to state 56
    XYZ             shift and go to state 41
    ID              shift and go to state 40

    TEXT                           shift and go to state 57
    SYMBOL                         shift and go to state 58

state 15

    (3) command -> COMMENT .

    COMMENT         reduce using rule 3 (command -> COMMENT .)
    POP             reduce using rule 3 (command -> COMMENT .)
    PUSH            reduce using rule 3 (command -> COMMENT .)
    SCREEN          reduce using rule 3 (command -> COMMENT .)
    SAVE            reduce using rule 3 (command -> COMMENT .)
    DISPLAY         reduce using rule 3 (command -> COMMENT .)
    CONE            reduce using rule 3 (command -> COMMENT .)
    CYLINDER        reduce using rule 3 (command -> COMMENT .)
    SPHERE          reduce using rule 3 (command -> COMMENT .)
    PATH            reduce using rule 3 (command -> COMMENT .)
    TORUS           reduce using rule 3 (command -> COMMENT .)
    BOX             reduce using rule 3 (command -> COMMENT .)
    LINE            reduce using rule 3 (command -> COMMENT .)
    MOVE            reduce using rule 3 (command -> COMMENT .)
    SCALE           reduce using rule 3 (command -> COMMENT .)
    ROTATE          reduce using rule 3 (command -> COMMENT .)
    FRAMES          reduce using rule 3 (command -> COMMENT .)
    BASENAME        reduce using rule 3 (command -> COMMENT .)
    VARY            reduce using rule 3 (command -> COMMENT .)
    SET             reduce using rule 3 (command -> COMMENT .)
    SET_KNOBS       reduce using rule 3 (command -> COMMENT .)
    AMBIENT         reduce using rule 3 (command -> COMMENT .)
    CONSTANTS       reduce using rule 3 (command -> COMMENT .)
    LIGHT           reduce using rule 3 (command -> COMMENT .)
    SHADING         reduce using rule 3 (command -> COMMENT .)
    CAMERA          reduce using rule 3 (command -> COMMENT .)
    GENERATE_RAYFILES reduce using rule 3 (command -> COMMENT .)
    MESH            reduce using rule 3 (command -> COMMENT .)
    SAVE_KNOBS      reduce using rule 3 (command -> COMMENT .)
    SAVE_COORDS     reduce using rule 3 (command -> COMMENT .)
    TWEEN           reduce using rule 3 (command -> COMMENT .)
    FOCAL           reduce using rule 3 (command -> COMMENT .)
    WEB             reduce using rule 3 (command -> COMMENT .)
    TEXTURE         reduce using rule 3 (command -> COMMENT .)
    $end            reduce using rule 3 (command -> COMMENT .)


state 16

    (51) command -> SET . SYMBOL NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 41
    ID              shift and go to state 40

    SYMBOL                         shift and go to state 59

state 17

    (9) command -> POP .

    COMMENT         reduce using rule 9 (command -> POP .)
    POP             reduce using rule 9 (command -> POP .)
    PUSH            reduce using rule 9 (command -> POP .)
    SCREEN          reduce using rule 9 (command -> POP .)
    SAVE            reduce using rule 9 (command -> POP .)
    DISPLAY         reduce using rule 9 (command -> POP .)
    CONE            reduce using rule 9 (command -> POP .)
    CYLINDER        reduce using rule 9 (command -> POP .)
    SPHERE          reduce using rule 9 (command -> POP .)
    PATH            reduce using rule 9 (command -> POP .)
    TORUS           reduce using rule 9 (command -> POP .)
    BOX             reduce using rule 9 (command -> POP .)
    LINE            reduce using rule 9 (command -> POP .)
    MOVE            reduce using rule 9 (command -> POP .)
    SCALE           reduce using rule 9 (command -> POP .)
    ROTATE          reduce using rule 9 (command -> POP .)
    FRAMES          reduce using rule 9 (command -> POP .)
    BASENAME        reduce using rule 9 (command -> POP .)
    VARY            reduce using rule 9 (command -> POP .)
    SET             reduce using rule 9 (command -> POP .)
    SET_KNOBS       reduce using rule 9 (command -> POP .)
    AMBIENT         reduce using rule 9 (command -> POP .)
    CONSTANTS       reduce using rule 9 (command -> POP .)
    LIGHT           reduce using rule 9 (command -> POP .)
    SHADING         reduce using rule 9 (command -> POP .)
    CAMERA          reduce using rule 9 (command -> POP .)
    GENERATE_RAYFILES reduce using rule 9 (command -> POP .)
    MESH            reduce using rule 9 (command -> POP .)
    SAVE_KNOBS      reduce using rule 9 (command -> POP .)
    SAVE_COORDS     reduce using rule 9 (command -> POP .)
    TWEEN           reduce using rule 9 (command -> POP .)
    FOCAL           reduce using rule 9 (command -> POP .)
    WEB             reduce using rule 9 (command -> POP .)
    TEXTURE         reduce using rule 9 (command -> POP .)
    $end            reduce using rule 9 (command -> POP .)


state 18

    (58) command -> CAMERA . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 37

    NUMBER                         shift and go to state 60

state 19

    (56) command -> LIGHT . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 41
    ID              shift and go to state 40

    SYMBOL                         shift and go to state 61

state 20

    (10) command -> PUSH .

    COMMENT         reduce using rule 10 (command -> PUSH .)
    POP             reduce using rule 10 (command -> PUSH .)
    PUSH            reduce using rule 10 (command -> PUSH .)
    SCREEN          reduce using rule 10 (command -> PUSH .)
    SAVE            reduce using rule 10 (command -> PUSH .)
    DISPLAY         reduce using rule 10 (command -> PUSH .)
    CONE            reduce using rule 10 (command -> PUSH .)
    CYLINDER        reduce using rule 10 (command -> PUSH .)
    SPHERE          reduce using rule 10 (command -> PUSH .)
    PATH            reduce using rule 10 (command -> PUSH .)
    TORUS           reduce using rule 10 (command -> PUSH .)
    BOX             reduce using rule 10 (command -> PUSH .)
    LINE            reduce using rule 10 (command -> PUSH .)
    MOVE            reduce using rule 10 (command -> PUSH .)
    SCALE           reduce using rule 10 (command -> PUSH .)
    ROTATE          reduce using rule 10 (command -> PUSH .)
    FRAMES          reduce using rule 10 (command -> PUSH .)
    BASENAME        reduce using rule 10 (command -> PUSH .)
    VARY            reduce using rule 10 (command -> PUSH .)
    SET             reduce using rule 10 (command -> PUSH .)
    SET_KNOBS       reduce using rule 10 (command -> PUSH .)
    AMBIENT         reduce using rule 10 (command -> PUSH .)
    CONSTANTS       reduce using rule 10 (command -> PUSH .)
    LIGHT           reduce using rule 10 (command -> PUSH .)
    SHADING         reduce using rule 10 (command -> PUSH .)
    CAMERA          reduce using rule 10 (command -> PUSH .)
    GENERATE_RAYFILES reduce using rule 10 (command -> PUSH .)
    MESH            reduce using rule 10 (command -> PUSH .)
    SAVE_KNOBS      reduce using rule 10 (command -> PUSH .)
    SAVE_COORDS     reduce using rule 10 (command -> PUSH .)
    TWEEN           reduce using rule 10 (command -> PUSH .)
    FOCAL           reduce using rule 10 (command -> PUSH .)
    WEB             reduce using rule 10 (command -> PUSH .)
    TEXTURE         reduce using rule 10 (command -> PUSH .)
    $end            reduce using rule 10 (command -> PUSH .)


state 21

    (0) S' -> input .



state 22

    (24) command -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER
    (25) command -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (26) command -> TORUS . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (27) command -> TORUS . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 37
    XYZ             shift and go to state 41
    ID              shift and go to state 40

    SYMBOL                         shift and go to state 63
    NUMBER                         shift and go to state 62

state 23
